docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.mdx
---
title: MultivariateLogNormalDistribution (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution
---

# MultivariateLogNormalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/multivariate_log_normal_distribution.py" signature="MultivariateLogNormalDistribution(num_qubits, low=None, high=None, mu=None, cov=None)" modifiers="class">
  The Multivariate Log-Normal Distribution.

  **Parameters**

  *   **num\_qubits** (`Union`\[`List`\[`int`], `ndarray`]) – Number of qubits per dimension
  *   **low** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Lower bounds per dimension
  *   **high** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Upper bounds per dimension
  *   **mu** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Expected values
  *   **cov** (`Union`\[`List`\[`float`], `ndarray`, `None`]) – Co-variance matrix

  ## Attributes

  <span id="multivariatelognormaldistribution-dimension" />

  ### dimension

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.dimension">
    returns dimensions
  </Attribute>

  <span id="multivariatelognormaldistribution-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.high">
    returns high
  </Attribute>

  <span id="multivariatelognormaldistribution-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.low">
    returns low
  </Attribute>

  <span id="multivariatelognormaldistribution-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.num_qubits">
    returns num qubits
  </Attribute>

  <span id="multivariatelognormaldistribution-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="multivariatelognormaldistribution-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.num_values">
    returns number of values
  </Attribute>

  <span id="multivariatelognormaldistribution-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.probabilities">
    returns probabilities
  </Attribute>

  <span id="multivariatelognormaldistribution-probabilities-vector" />

  ### probabilities\_vector

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.probabilities_vector">
    returns probabilities vector
  </Attribute>

  <span id="multivariatelognormaldistribution-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.values">
    returns values
  </Attribute>

  ## Methods

  <span id="multivariatelognormaldistribution-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build" signature="MultivariateLogNormalDistribution.build(qc, q, q_ancillas=None, params=None)" />

  <span id="multivariatelognormaldistribution-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_controlled" signature="MultivariateLogNormalDistribution.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="multivariatelognormaldistribution-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_controlled_inverse" signature="MultivariateLogNormalDistribution.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="multivariatelognormaldistribution-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_controlled_inverse_power" signature="MultivariateLogNormalDistribution.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatelognormaldistribution-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_controlled_power" signature="MultivariateLogNormalDistribution.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatelognormaldistribution-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_inverse" signature="MultivariateLogNormalDistribution.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="multivariatelognormaldistribution-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_inverse_power" signature="MultivariateLogNormalDistribution.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatelognormaldistribution-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.build_power" signature="MultivariateLogNormalDistribution.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="multivariatelognormaldistribution-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.get_num_qubits" signature="MultivariateLogNormalDistribution.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="multivariatelognormaldistribution-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.get_num_qubits_controlled" signature="MultivariateLogNormalDistribution.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="multivariatelognormaldistribution-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.pdf_to_probabilities" signature="MultivariateLogNormalDistribution.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    pdf to probabilities
  </Function>

  <span id="multivariatelognormaldistribution-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.required_ancillas" signature="MultivariateLogNormalDistribution.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="multivariatelognormaldistribution-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.MultivariateLogNormalDistribution.required_ancillas_controlled" signature="MultivariateLogNormalDistribution.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

